SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository, snapshots and future releases.
===============================================================================================

Enhancements:

#620 Direct SQL to MS Excel exports now offers to create additional
  sheets containing the exported SQL statements.
  Note: For direct SQL exports, right mouse click an SQL statement or hit Ctrl+T --> sql2file
  or check the multiple sheet export explained in the "About Exporting" link at the bottom of the export dialog.

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/61 (third)
SQL result search function: The tool tips of the "find next" and "find previous" buttons
  now show their keyboard shortcuts: Enter or F3 and Shift F3 respectively.

Improved logging:
  When a statement execution is canceled the JDBC driver usually exits the statement's execution
  by throwing an exception. This exception is now logged with level info.

Image display in table cell data dialog or table cell data detail:
  When decoding Base64, characters that are not valid Base64 characters are ignored.
  This is helpful, for example, when MySQL's TO_BASE64 function is used,
  as it introduces line feeds into the Base64 string.

Table cell data dialog / Table cell data detail:
  Image display offers a button to scale the image to the current display size.

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/61 (second)
  When searching a SQL result table with its table cell detail display open
  or a pinned cell data dialog, occurrences of the search string will be highlighted
  in the cell detail display and/or the cell data dialog.

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/63
  Aliases panel: The selected Alias can now be connected by hitting enter.

Option to warp the Aliases' toolbar to two lines:
  A new toggle button (or checked menu item) in the Aliases toolbar,