@@ -1,6 +1,14 @@
 
 CopySeparatedByDlg.title=Choose separator
 CopySeparatedByDlg.cell.separator=Cell separator
+
+CopySeparatedByDlg.cell.delimiter=Cell delimiter
+CopySeparatedByDlg.cell.delimiter.info=<html>If a cell delimiter is specified, occurrences of the delimiter<br>\
+  in the cell content will be escaped by duplicating the delimiter.<br>\
+  Empty means no cell delimiter.</html>
+
+CopySeparatedByDlg.include.column.headers=Include column headers
+
 CopySeparatedByDlg.row.separator=Row separator
 
 CopySeparatedByDlg.cell.ok=Ok
