@@ -5,6 +5,8 @@ import net.sourceforge.squirrel_sql.fw.datasetviewer.cellcomponent.BaseDataTypeC
 import net.sourceforge.squirrel_sql.fw.gui.ClipboardUtil;
 import net.sourceforge.squirrel_sql.fw.util.StringManager;
 import net.sourceforge.squirrel_sql.fw.util.StringManagerFactory;
+import net.sourceforge.squirrel_sql.fw.util.StringUtilities;
+import org.apache.commons.lang3.StringUtils;
 
 public class TableCopySeparatedByCommand
 {
@@ -31,14 +33,18 @@ public class TableCopySeparatedByCommand
 
       String cellSeparator = copySeparatedByCtrl.getCellSeparator();
 
-      String columnSeparator = copySeparatedByCtrl.getRowSeparator();
+      String rowSeparator = "\n";
+      if(false == copySeparatedByCtrl.isIncludeHeaders())
+      {
+         rowSeparator = copySeparatedByCtrl.getRowSeparator();
+      }
 
       if(1 == nbrSelCols)
       {
-         columnSeparator = "";
+         rowSeparator = "";
       }
 
-      int preferedLineLength = copySeparatedByCtrl.getPreferedLineLength();
+      int preferredLineLength = copySeparatedByCtrl.getPreferredLineLength();
 
 
 
@@ -49,13 +55,28 @@ public class TableCopySeparatedByCommand
 
       StringBuilder sb = new StringBuilder();
 
+      if(copySeparatedByCtrl.isIncludeHeaders())
+      {
+         for (int colIdx = 0; colIdx < nbrSelCols; ++colIdx)
+         {
+            if(0 < colIdx)
+            {
+               sb.append(cellSeparator);
+            }
+
+            sb.append(wrapCellDelimiter(_table.getColumnName(selCols[colIdx]), copySeparatedByCtrl.getCellDelimiter()));
+
+         }
+         sb.append("\n");
+      }
+
       for (int rowIdx = 0; rowIdx < nbrSelRows; ++rowIdx)
       {
          if(1 < nbrSelCols && rowIdx > 0)
          {
-            sb.append(columnSeparator);
+            sb.append(rowSeparator);
 
-            if(preferedLineLength < getDistToLastNewLine(sb))
+            if(preferredLineLength < getDistToLastNewLine(sb))
             {
                sb.append("\n");
             }
@@ -72,7 +93,7 @@ public class TableCopySeparatedByCommand
                {
                   sb.append(cellSeparator);
 
-                  if(preferedLineLength < getDistToLastNewLine(sb))
+                  if(false == copySeparatedByCtrl.isIncludeHeaders() && preferredLineLength < getDistToLastNewLine(sb))
                   {
                      sb.append("\n");
                   }
@@ -89,20 +110,30 @@ public class TableCopySeparatedByCommand
             if(cellObj instanceof String && -1 < ((String)cellObj).indexOf('\n'))
             {
                int lineBreakPos = ((String)cellObj).indexOf('\n');
-               sb.append((String)cellObj, 0, lineBreakPos);
+               sb.append(wrapCellDelimiter(cellObj, copySeparatedByCtrl.getCellDelimiter()), 0, lineBreakPos);
             }
             else if(null == cellObj)
             {
-               sb.append(BaseDataTypeComponent.NULL_VALUE_PATTERN);
+               sb.append(wrapCellDelimiter(BaseDataTypeComponent.NULL_VALUE_PATTERN, copySeparatedByCtrl.getCellDelimiter()));
             }
             else
             {
-               sb.append(cellObj.toString());
+               sb.append(wrapCellDelimiter(cellObj, copySeparatedByCtrl.getCellDelimiter()));
             }
          }
       }
 
       ClipboardUtil.copyToClip(sb);
+   }
+
+   private String wrapCellDelimiter(Object cellContent, String cellDelimiter)
+   {
+      if(StringUtilities.isEmpty(cellDelimiter, true))
+      {
+         return "" + cellContent;
+      }
+
+      return cellDelimiter + StringUtils.replace("" + cellContent, cellDelimiter, cellDelimiter+cellDelimiter) + cellDelimiter;
    }
 
    private int getDistToLastNewLine(StringBuilder sb)
